--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2021"
 [dependencies]
 rand = "0.8.5"
 nalgebra-glm = "0.18.0"
+serde = { version = "1.0.195", features = ["derive"] }
+serde_json = "1.0"
 
 [profile.dev]
-opt-level=1
+opt-level=0
 debug=2
 incremental=true
 
