--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+lazy_static = "1.4.0"
 rand = "0.8.5"
 nalgebra-glm = "0.18.0"
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0"
+tracy-client = {version = "0.17.0", optional = true }
+tracing-tracy = {version = "0.11.0", optional = true }
 
 [profile.dev]
 opt-level=0
@@ -23,3 +26,6 @@ incremental=true
 opt-level=3
 debug=0
 incremental=true
+
+[features]
+profiling = ["dep:tracy-client", "dep:tracing-tracy"]
