--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 lazy_static = "1.4.0"
 rand = "0.8.5"
 nalgebra-glm = "0.18.0"
+kurbo = "0.11.0"
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0"
 tracy-client = {version = "0.17.0", optional = true }
