--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -4,12 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+transfer-window-common = { path = "../common" }
 log = "0.4.21"
-env_logger = "0.11.3"
 lazy_static = "1.4.0"
 nalgebra-glm = { version = "0.18.0", features = ["serde-serialize"] }
 rand = "0.8.5"
-kurbo = "0.11.0"
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0"
 tracy-client = { version = "0.17.0", optional = true }
