--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -8,6 +8,7 @@ transfer-window-common = { path = "../common" }
 log = "0.4.21"
 lazy_static = "1.4.0"
 nalgebra-glm = { version = "0.18.0", features = ["serde-serialize"] }
+roots = "0.0.8"
 rand = "0.8.5"
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0"
