--- a/view/Cargo.toml
+++ b/view/Cargo.toml
@@ -10,6 +10,11 @@ log = "0.4.21"
 nalgebra-glm = "0.18.0"
 eframe = { version = "0.23", features = ["glow"] }
 image = { version = "0.25", features = ["jpeg", "png"] }
+tracy-client = { version = "0.17.0", optional = true }
+tracing-tracy = { version = "0.11.0", optional = true }
+
+[features]
+profiling = ["dep:tracy-client", "dep:tracing-tracy"]
 
 [lints]
 workspace = true
