Remove floating point comparison warning

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,4 @@ large_enum_variant = "allow"
 should_panic_without_expect = "allow"
 many_single_char_names = "allow"
 similar_names = "allow"
+float_cmp = "allow"
