--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -8,7 +8,9 @@ log = "0.4.21"
 nalgebra-glm = "0.18.0"
 kurbo = "0.11.0"
 tracy-client = { version = "0.17.0", optional = true }
-tracing-tracy = { version = "0.11.0", optional = true }
+
+[features]
+profiling = ["dep:tracy-client"]
 
 [lints]
 workspace = true
