--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -14,10 +14,9 @@ rand = "0.8.5"
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0"
 tracy-client = { version = "0.17.0", optional = true }
-tracing-tracy = { version = "0.11.0", optional = true }
 
 [features]
-profiling = ["dep:tracy-client", "dep:tracing-tracy"]
+profiling = ["dep:tracy-client"]
 
 [lints]
 workspace = true
