--- a/view/Cargo.toml
+++ b/view/Cargo.toml
@@ -11,10 +11,9 @@ nalgebra-glm = "0.18.0"
 eframe = { version = "0.23", features = ["glow"] }
 image = { version = "0.25", features = ["jpeg", "png"] }
 tracy-client = { version = "0.17.0", optional = true }
-tracing-tracy = { version = "0.11.0", optional = true }
 
 [features]
-profiling = ["dep:tracy-client", "dep:tracing-tracy"]
+profiling = ["dep:tracy-client"]
 
 [lints]
 workspace = true
