--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -11,10 +11,8 @@ log = "0.4.21"
 env_logger = "0.11.3"
 tracy-client = { version = "0.17.0", optional = true }
 tracing-tracy = { version = "0.11.0", optional = true }
-
-[dependencies.eframe]
-version = "0.23"
-features = ["glow"]
+eframe = { version = "0.23", features = ["glow"] }
+egui_extras = { version = "0.23", features = ["image", "file"] }
 
 [features]
 profiling = ["dep:tracy-client", "dep:tracing-tracy"]
