--- a/view/Cargo.toml
+++ b/view/Cargo.toml
@@ -11,6 +11,7 @@ nalgebra-glm = "0.18.0"
 eframe = { version = "0.23", features = ["glow"] }
 image = { version = "0.25", features = ["jpeg", "png"] }
 tracy-client = { version = "0.17.0", optional = true }
+egui_extras = { version = "0.23", features = ["image", "file"] }
 
 [features]
 profiling = ["dep:tracy-client"]
