THE GREAT VIEW REFACTOR

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,4 @@ should_panic_without_expect = "allow"
 many_single_char_names = "allow"
 similar_names = "allow"
 float_cmp = "allow"
+enum_variant_names = "allow"
