--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,4 @@ many_single_char_names = "allow"
 similar_names = "allow"
 float_cmp = "allow"
 enum_variant_names = "allow"
+missing_panics_doc = "allow"
