--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+ecolor = { version = "0.27.2", features = ["serde"] }
 transfer-window-common = { path = "../common" }
 rust-kepler-solver = "0.1.0"
 log = "0.4.21"
