--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,3 +44,5 @@ similar_names = "allow"
 float_cmp = "allow"
 enum_variant_names = "allow"
 missing_panics_doc = "allow"
+ptr_arg = "allow"
+new_ret_no_self = "allow"
