--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 log = "0.4.21"
 nalgebra-glm = "0.19.0"
+serde = { version = "1.0.195", features = ["derive"] }
 kurbo = "0.11.0"
 tracy-client = { version = "0.17.0", optional = true }
 
