--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -15,6 +15,8 @@ tracing-tracy = { version = "0.11.0", optional = true }
 eframe = { version = "0.28.1", features = ["glow"] }
 egui_extras = { version = "0.28.1", features = ["image", "file"] }
 sysinfo = "0.30.12"
+serde = { version = "1.0.195", features = ["derive"] }
+serde_json = "1.0"
 
 [features]
 profiling = ["dep:tracy-client", "dep:tracing-tracy"]
