--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -2,6 +2,7 @@ unstable_features = true
 
 edition = "2021"
 condense_wildcard_suffixes = true
+chain_width = 100
 group_imports = "StdExternalCrate"
 imports_granularity = "Module"
 newline_style = "Unix"
