--- a/view/Cargo.toml
+++ b/view/Cargo.toml
@@ -13,6 +13,7 @@ image = { version = "0.25", features = ["jpeg", "png"] }
 tracy-client = { version = "0.17.0", optional = true }
 egui_extras = { version = "0.28.1", features = ["image", "file"] }
 thousands = "0.2.0"
+itertools = "0.13.0"
 
 [features]
 profiling = ["dep:tracy-client"]
