--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,3 +47,4 @@ missing_panics_doc = "allow"
 ptr_arg = "allow"
 new_ret_no_self = "allow"
 too_many_lines = "allow"
+struct_excessive_bools = "allow"
