--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -9,6 +9,7 @@ transfer-window-common = { path = "../common" }
 rust-kepler-solver = "0.1.0"
 log = "0.4.21"
 lazy_static = "1.4.0"
+quick-impl = "0.1"
 nalgebra-glm = { version = "0.19.0", features = ["serde-serialize"] }
 roots = "0.0.8"
 rand = "0.8.5"
